changes to comments

--- a/src/template.html
+++ b/src/template.html
@@ -29,14 +29,14 @@
     <main role="main">
         <section class="edit-area">
             <nav>
-                <button class="menu-btn btn active" value="textarea">Text area</button>
-                <button class="menu-btn btn" value="words">Words</button>
-                <button class="menu-btn btn" value="faq">FAQ</button>
+                <button class="btn menu-btn active" value="textarea">Text area</button>
+                <button class="btn menu-btn" value="words">Words</button>
+                <button class="btn menu-btn" value="faq">FAQ</button>
             </nav>
             <div class="underline"></div>
             <div class="edit-area-sections">
                 <section class="text-input">
-                    <div contenteditable="true" id="text-area" ></div>
+                    <div contenteditable="true" id="text-area"></div>
                     <div id="highlighted-repeated-words"></div>
                     <div id="highlighted-overused-words"></div>
                 </section>
@@ -86,7 +86,7 @@
                             visible on the list and in the text area.</dd>
 
                         <dt>How to delete overused words?</dt>
-                        <dd>Each custom or predefined overused word have a <span> - </span> icon on
+                        <dd>Each custom or predefined overused word have a <span> - </span> character on
                             right side of the overused word list. Click on it, to delete a word.</dd>
                     </dl>
                 </section>
